Add web service documentations and wsdl

--- a/README.rdoc
+++ b/README.rdoc
@@ -14,9 +14,9 @@ Description goes here.
 3. Install Jmol applet. Just copy the .js and the applet .jar in <xmipp-www dir>/www/public/Jmol directory. Follow the instructions "here":http://wiki.jmol.org/index.php/Jmol_Applet#Installing_Jmol_Applet
 
 == Running
-1. Install simplews and rbbt
+1. Install simplews and rbbt. You may need to run rbbt_config, just accept the default values
 2. Start web service:
-    start_jobs_ws <xmipp-www dir>/webservice/xmippWS.rb  --name XMIPPWS
+    start_jobs_ws <xmipp-www dir>/webservice/xmippWS.rb  --name XMIPPWS --host <hostname> --wsdl <xmipp-www dir>/webservice/wsdl/xmippWS.wsdl
 3. Start sinatra web server:
     ruby <xmipp-www dir>/www/xmipp_sinatra.rb
 
